--- a/.gitignore
+++ b/.gitignore
@@ -60,4 +60,5 @@ lib/generated_plugin_registrant.dart
 !**/ios/**/default.perspectivev3
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 
+.idea/workspace.xml
 # End of https://www.toptal.com/developers/gitignore/api/flutter
