google-services.json 파일이 git 히스토리에 남겨지지 않기 위한 커밋

--- a/.gitignore
+++ b/.gitignore
@@ -61,4 +61,7 @@ lib/generated_plugin_registrant.dart
 !/packages/flutter_tools/test/data/dart_dependencies_test/**/.packages
 
 .idea/workspace.xml
+
+google-services.json
+
 # End of https://www.toptal.com/developers/gitignore/api/flutter
