--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -29,6 +29,11 @@ dependencies:
   # Use with the CupertinoIcons class for iOS style icons.
   cupertino_icons: ^0.1.3
   image_picker: ^0.6.7+11
+  flutter_signin_button: ^1.1.0
+  firebase_auth: ^0.14.0+5
+  google_sign_in: ^4.0.7
+  cloud_firestore: ^0.12.9+3
+  firebase_storage: ^3.0.6
 
 dev_dependencies:
   flutter_test:
